--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="refresh" content="">
-
+    
     <link rel="stylesheet" href="style.css">
 
     <title>CANAL Sr. VAQUINHA</title>
@@ -35,6 +34,9 @@
             <p id="date"></p>
             <script src="script.js"></script>
         </section>
+<section onload="exibirDataAtualizada()">
+    <p id="date"></p>
+</section>
 
 
         <section onload="relog2">
