--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
 
         <section onload="relog1">
-            <p id="relogio01"></p>
+            <p id="date"></p>
             <script src="script.js"></script>
         </section>
 <section onload="exibirDataAtualizada()">
