--- a/index.html
+++ b/index.html
@@ -1,64 +1,144 @@
-<!DOCTYPE html>
-<html lang="pr-br">
+//horário de Brasília////////////////////////////////////////////////////////////////////////////////////////
+        setInterval(function relog() {
+        let rel = document.getElementById('relogio01')
+        let data = new Date();
+        data.setSeconds(data.getSeconds() +20);
+        let h = data.getHours();
+        let m = data.getMinutes();
+        let s = data.getSeconds();
+          if (h < 10) {// coloca um zero antes dos números abaixo de dez: ex: 1: 1: 1 depois ex 01:01:01////////////////////
+           h = `0${h}`
+        }
+        if (m < 10) {
+           m = `0${m}`
+        }  
+        if (s < 10) {
+           s = `0${s}`
+        }
+        // Mostra a hora minutos e segundos na página /////////////////////////////////////////////////////
+            rel.innerHTML = `${h}:${m}:${s}`
+        })
+    //horário de Fernando de Noronha////////////////////////////////////////////////////////////////////////  
+    setInterval(function relog2() {
+        let rel = document.getElementById('relogio2')
+        let data = new Date();
+        data.setSeconds(data.getSeconds() +20);
+        data.setHours(data.getHours() +1);
+        let h = data.getHours() ; 
+        let m = data.getMinutes();
+        let s = data.getSeconds() 
+           if (h < 10) {  // coloca um zero antes dos números abaixo de dez: ex: 1: 1: 1 depois ex 01:01:01////////////////////
+              h = `0${h}`
+           } 
+           if (m < 10) {
+              m = `0${m}`
+           }
+           if (s < 10) {
+              s = `0${s}`
+           }
+           // Mostra a hora minutos e segundos na página /////////////////////////////////////////////////////
+               rel.innerHTML = `${h}:${m}:${s}`
+           })
+    //horário de Amazonas///////////////////////////////////////////////////////////////////////////////////   
+    setInterval(function relog3() {
+        let rel = document.getElementById('relogio3');
+        let data = new Date();
+        data.setSeconds(data.getSeconds() +20);
+        data.setHours(data.getHours() -1);
+        let h = data.getHours() ;
+        let m = data.getMinutes();
+        let s = data.getSeconds(); 
+          if (h < 10) {  // coloca um zero antes dos números abaixo de dez: ex: 1: 1: 1 depois ex 01:01:01////////////////////
+           h = `0${h}`
+        }
+        if (m < 10) {
+           m = `0${m}`
+        }
+        if (s < 10) {
+           s = `0${s}`
+        }
+            rel.innerHTML = `${h}:${m}:${s}`   // Mostra a hora minutos e segundos na página /////////////////////////////////////////////////////
+           })
+    //horário de Acre////////////////////////////////////////////////////////////////////////////////////
+    setInterval(function relog4() {
+        let rel = document.getElementById('relogio4')
+        let data = new Date();
+        data.setSeconds(data.getSeconds() +20);
+        data.setHours(data.getHours() -2);
+        let h = data.getHours();
+        let m = data.getMinutes();
+        let s = data.getSeconds() ;  
+          if (h < 10) { // coloca um zero antes dos números abaixo de dez: ex: 1: 1: 1 depois ex 01:01:01////////////////////
+           h = `0${h}`
+        }
+        if (m < 10) {
+           m = `0${m}`
+        } 
+        if (s < 10) {
+           s = `0${s}`
+        }
+            rel.innerHTML = `${h}:${m}:${s}`  // Mostra a hora minutos e segundos na página /////////////////////////////////////////////////////       
+           })   
+//Dia mês e ano /////////////////////////////////////////////////////////////////////////////////////////////
+// Função para exibir a data atualizada
+function exibirDataAtualizada() {
+  let meses = [
+    "Janeiro", "Fevereiro", "Março", "Abril", "Maio", "Junho",
+    "Julho", "Agosto", "Setembro", "Outubro", "Novembro", "Dezembro"
+  ];
+  let semanas = [
+    "Domingo", "Segunda-Feira", "Terça-Feira", "Quarta-Feira",
+    "Quinta-Feira", "Sexta-Feira", "Sábado"
+  ];
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
-    <link rel="stylesheet" href="style.css">
+  let data = new Date();
+  let diasem = data.getDay();
+  let dia = data.getDate();
+  let mes = data.getMonth();
+  let ano = data.getFullYear();
 
-    <title>CANAL Sr. VAQUINHA</title>
-</head>
-<h1>HORÁRIO DE BRASÍLIA</h1>
+  // Verifica se é meia-noite (00:00:00)
+  if (data.getHours() === 0 && data.getMinutes() === 0 && data.getSeconds() === 0) {
+    // Incrementa um dia
+    data.setDate(data.getDate() + 1);
+    dia = data.getDate();
+    mes = data.getMonth();
+    ano = data.getFullYear();
+  }
 
-<Body>
+  // Atualiza o conteúdo do elemento com o ID "date"
+  document.getElementById("date").innerHTML = semanas[diasem] + ", " + dia + " de " + meses[mes] + " de " + ano;
+}
 
-    <Div>
-        <section onload="relog5">
-            <p id="Relogio05"></p>
+// Função para atualizar a data a cada segundo
+function atualizarData() {
+  let data = new Date();
+  let horas = data.getHours();
+  let minutos = data.getMinutes();
+  let segundos = data.getSeconds();
 
+  // Verifica se é meia-noite (00:00:00)
+  if (horas === 0 && minutos === 0 && segundos === 0) {
+    exibirDataAtualizada();
 
-            <script src="script.js"></script>
-        </section>
+    // Define o próximo intervalo de atualização para o próximo dia
+    let proximaAtualizacao = new Date();
+    proximaAtualizacao.setDate(proximaAtualizacao.getDate() + 0);
+    proximaAtualizacao.setSeconds(proximaAtualizacao.getSeconds() + 20);      
+    proximaAtualizacao.setHours(0);
+    proximaAtualizacao.setMinutes(0);
+    proximaAtualizacao.setSeconds(0);
 
-        <section onload="relog">
-            <p id="relogio01"></p>
+    let tempoAteProximaAtualizacao = proximaAtualizacao.getTime() - data.getTime();
 
+    setTimeout(atualizarData, tempoAteProximaAtualizacao);
+  } else {
+    setTimeout(atualizarData, 1000); // Chama a função novamente após 1 segundo
+  }
+}
 
-            <script src="script.js"></script>
-        </section>
+// Chama a função para exibir a data atualizada
+exibirDataAtualizada();
 
-
-        <section onload="relog1">
-            <p id="date"></p>
-            <script src="script.js"></script>
-        </section>
-<section onload="exibirDataAtualizada()">
-    <p id="date"></p>
-</section>
-
-
-        <section onload="relog2">
-            <p class="fn">FERNANDO DE NORONHA</p>
-            <div id="relogio2"></div>
-            <script src="script.js"></script>
-        </section>
-
-
-        <section onload="relog3">
-
-            <p class="am">AMAZONAS</p>
-            <div id="relogio3"></div>
-            <script src="script.js"></script>
-        </section>
-
-        <section onload="relog4">
-            <p class="ac">ACRE</p>
-            <div id="relogio4"></div>
-            <script src="script.js"></script>
-        </section>
-    </Div>
-</Body>
-
-</html>
+// Atualiza a data a cada segundo
+atualizarData();
