--- a/index.html
+++ b/index.html
@@ -30,12 +30,10 @@
         </section>
 
 
-        <section onload="relog1">
-            <p id="date"></p>
-            <script src="script.js"></script>
-        </section>
-<section onload="exibirDataAtualizada()">
+<section>
+  <p id="data" class="data"></p>
 </section>
+
 
 
         <section onload="relog2">
