--- a/index.html
+++ b/index.html
@@ -30,10 +30,13 @@
         </section>
 
 
-<section>
-  <p id="data" class="data"></p>
+        <section onload="relog1">
+            <p id="date"></p>
+            <script src="script.js"></script>
+        </section>
+<section onload="exibirDataAtualizada()">
+    <p id="date"></p>
 </section>
-
 
 
         <section onload="relog2">
