--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
 
         <section onload="relog2">
-            <p class="fn">FERNANDO DE NORONHA</p>
+            <p class="fn">ACRE</p>
             <div id="relogio2"></div>
             <script src="script.js"></script>
         </section>
@@ -54,7 +54,7 @@
         </section>
 
         <section onload="relog4">
-            <p class="ac">ACRE</p>
+            <p class="ac">FERNANDO DE NORONHA</p>
             <div id="relogio4"></div>
             <script src="script.js"></script>
         </section>
